--- a/package.json
+++ b/package.json
@@ -11,10 +11,16 @@
   "dependencies": {
     "next": "13.1.2",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-modern-drawer": "^1.1.2",
+    "react-responsive-carousel": "^3.2.23"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.13",
     "eslint": "8.32.0",
-    "eslint-config-next": "13.1.2"
+    "eslint-config-next": "13.1.2",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
   }
 }
